# gongchengshijian

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  start.bat  start.sh  start_uv.bat
backend/: .env.example  frontend_api_requirements.md  main.py  需求1.md
backend/agent/: __init__.py  chat.py  prompts.py  rag.py
backend/data/crawled/: .gitkeep  literature.json  materials.json  meta.json  molecules.json
backend/database/: initial_db.py
backend/init/: __init__.py  crawl_data.py  crawl_insert_data.py  data_common.py  init_config.py  initial_db.py  insert_data.py  test_insert.py
backend/routers/: __init__.py  auth.py  molecule.py  molecule_open.py  xrd.py
doc/: 1需求分析报告.docx  2需求规格说明.docx  3部署手册.docx  4测试报告.docx  任务分工.md  后端已实现接口.md
frontend/: package-lock.json  package.json  vue.config.js  xrd-sample-100.txt
frontend/public/: chemtest.html  index.html
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: AppBreadcrumb.vue  AppFooter.vue  IntelligentSearch.vue  PeriodicTable.vue
frontend/src/i18n/: index.js
frontend/src/layouts/: DefaultLayout.vue
frontend/src/mock/: data.js
frontend/src/store/: index.js
frontend/src/store/modules/: materials.js  molecule.js  user.js
frontend/src/utils/: auth.js  request.js
frontend/src/views/admin/: ControlConsole.vue  MetadataManage.vue  PermissionTagDefinitionManage.vue  SystemAuditLog.vue  TagDefinitionManage.vue
frontend/src/views/api-info/: ApiInfo.vue
frontend/src/views/auth/: Login.vue  (+3 more)
frontend/xrd-backend/: main.py  requirements.txt  xrd_processor.py
(+22 files in other folders)
