[project]
name = "gongchengshijian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.5.9",
    "email-validator>=2.3.0",
    "fastapi>=0.128.8",
    "langchain-openai>=0.3.35",
    "numpy==1.26.4",
    "onnxruntime<1.17",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.20",
    "rdkit==2024.3.1",
    "requests>=2.32.5",
    "tomli>=2.4.1",
    "torch>=2.8.0",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
